deploy/overlays/cloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sampleapi-cloud
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
